# signal-agent

./: .env.example  Makefile  README.md  app.py  config.py  graph.py  llm.py  main.py  prompts.py  pyproject.toml  request.http  schemas.py  state.py
clients/: google_news.py  http.py  vietstock.py
data/: news_sources.yaml  sector_news_rules.yaml 
db/: article_repo.py  models.py  pool.py
docs/: article.md  struct.md
ingestion/: dedup.py  fetcher.py  gnews_resolver.py  normalize.py  pipeline.py  rss.py  run.py  scorer.py  sources.py
nodes/: build_context.py  generate_signal.py  load_news.py  load_price.py  validate_signal.py
tests/: conftest.py  test_dedup.py  test_news_tool.py  test_price_tool.py  test_rss.py  test_scorer.py  test_vietstock.py
tools/: article.py  geopolitical.py  macro.py  news.py  price.py
